--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ h1{
 
 .board{
     margin-top: 30px;
+    /* width:100%; */
+    width:1450px;
+    max-width:1450px;
 }
 
 .holder{
@@ -37,50 +40,72 @@ h1{
 .t1{
     position: absolute;
     width:3%;
-    height:15%;
+    height:10%;
     min-width:40px;
-    top:75%;
+    top:38%;
     left:29%; 
 }
 
 .t2{
     position: absolute;
     width:3%;
-    height:15%;
+    height:10%;
     min-width:40px;
-    top:75%;
+    top:38%;
     left:35%; 
 }
 
 .t3{
     position: absolute;
     width:3%;
-    height:15%;
+    height:10%;
     min-width:40px;
-    top:75%;
+    top:38%;
     left:41%; 
 }
 
 .t4{
     position: absolute;
     width:3%;
-    height:15%;
+    height:10%;
     min-width:40px;
-    top:75%;
+    top:38%;
     left:47%; 
 }
 
-.bye{
-    width:40%;
-    height: 40%;
-    margin-top: 30%;
-    margin-left:25%;
-    width:50%;
+.t5{
+    position: absolute;
+    width:3%;
+    height:10%;
+    min-width:40px;
+    top:38%;
+    left:53%; 
 }
 
-/* .a1{
-    margin:0;
-    padding-left:-5px;
-    background:red;
-} */
+.t6{
+    position: absolute;
+    width:3%;
+    height:10%;
+    min-width:40px;
+    top:38%;
+    left:59%; 
+}
+
+.t7{
+    position: absolute;
+    width:3%;
+    height:10%;
+    min-width:40px;
+    top:38%;
+    left:65%; 
+}
+
+.info{
+    margin-top: 15.5%;
+    background:black;
+    color:white;
+    text-align: center;
+}
+
+
 
